# H2M-Plugin-Loader

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/: Config.hpp  HotReloader.hpp  Logger.hpp  PluginInjector.hpp  PluginScanner.hpp  Version.hpp  d3d11proxy.hpp
src/: Config.cpp  HotReloader.cpp  Logger.cpp  PluginInjector.cpp  PluginScanner.cpp  d3d11proxy.cpp  dllmain.cpp
